memgraph_versioned_docs/version-1.6.1/tutorials/overview.md
---
id: overview
title: Tutorials
sidebar_label: Tutorials overview
slug: /tutorials
---

Articles within the tutorials section serve as real-world examples of using
Memgraph. These articles tend to provide the user with a reasonably-sized
dataset and some example queries that showcase how to use Memgraph on that
particular dataset. We encourage all Memgraph users to go through at least
one of the tutorials as they can also serve as a verification that Memgraph
is successfully installed on your system.

So far we have covered the following topics with basic tutorials:

  * **[Analyzing TED Talks](analyzing-ted-talks.md)** - [Try it on Playground!](https://playground.memgraph.com/TEDTalk)
  * **[Backpacking Through Europe](backpacking-through-europe.md)** - [Try it on Playground!](https://playground.memgraph.com/Backpacking)
  * **[Exploring the European Road Network](exploring-the-european-road-network.md)** - [Try it on Playground!](https://playground.memgraph.com/Europe)
  * **[Football Transfers](football-transfers.md)** - [Try it on Playground!](https://playground.memgraph.com/FootballTransfers)
  * **[Game of Thrones deaths](got-deaths.md)** - [Try it on Playground!](https://playground.memgraph.com/GoT)
  * **[Graphing the Premier League](graphing-the-premier-league.md)** - [Try it on Playground!](https://playground.memgraph.com/Football)
  * **[Movie Recommendation System](movie-recommendation.md)**
  * **[Marvel Comic Universe Social Network](marvel-universe.md)** - [Try it on Playground!](https://playground.memgraph.com/MCU)


If you are looking for more complex tutorials that include the usage of database
functionalities such as query modules, then take a look at these:

  * **[Understanding music (with modules)](understanding-music-with-modules.md)**
  * **[Social Network Analysis with NetworkX](social-network-analysis.md)**