memgraph_versioned_docs/version-2.1.1/tutorials/overview.md
---
id: overview
title: Tutorials
sidebar_label: Tutorials overview
slug: /tutorials
---

Articles within the tutorials section serve as real-world examples of using
Memgraph.

## Cypher and graph analytics tutorials

These articles tend to provide the user with a reasonably-sized dataset and some
example queries that showcase how to use Memgraph on that particular dataset. We
encourage all Memgraph users to go through at least one of the tutorials as they
can also serve as a verification that Memgraph is successfully installed on your
system.

So far we have covered the following topics with basic tutorials:

- **[Analyzing TED Talks](analyzing-ted-talks.md)** - [Try it on
  Playground!](https://playground.memgraph.com/sandbox/ted-talks)
- **[Backpacking Through Europe](backpacking-through-europe.md)** - [Try it on
  Playground!](https://playground.memgraph.com/sandbox/europe-backpacking)
- **[Exploring the European Road
  Network](exploring-the-european-road-network.md)** - [Try it on
  Playground!](https://playground.memgraph.com/sandbox/europe-roads)
- **[Football Transfers](football-transfers.md)** - [Try it on
  Playground!](https://playground.memgraph.com/sandbox/football-transfers)
- **[Game of Thrones deaths](got-deaths.md)** - [Try it on
  Playground!](https://playground.memgraph.com/sandbox/game-of-thrones-deaths)
- **[Graphing the Premier League](graphing-the-premier-league.md)** - [Try it on
  Playground!](https://playground.memgraph.com/sandbox/football-premier-league)
- **[Movie Recommendation System](movie-recommendation.md)**
- **[Marvel Comic Universe Social Network](marvel-universe.md)** - [Try it on
  Playground!](https://playground.memgraph.com/sandbox/marvel-comics)

If you are looking for more complex tutorials that include the usage of database
functionalities such as query modules, then take a look at these:

- **[Understanding music (with modules)](understanding-music-with-modules.md)**
- **[Social Network Analysis with NetworkX](social-network-analysis.md)**

## Building applications and other tutorials

These articles demonstrate how to build real-world applications that use graph
analytics and how to perform complex network analysis with Memgraph. Each one
focuses on a specific problem.

| Article                                                                                                                                                                                                                           | GitHub code                                                                                    | Streaming data |
| --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------- | -------------- |
| [Visualizing and Analyzing Reddit In Real-Time with Kafka and Memgraph](https://memgraph.com/blog/reddit-network-explorer)                                                                                                        | [Repository](https://github.com/memgraph/reddit-network-explorer/)                             | ☑️             |
| [Analyzing Interactions in a Slack Communication Network](https://memgraph.com/blog/slack-influence-bot)                                                                                                                          | [Repository](https://github.com/memgraph/slack-influence-bot/)                                 | ☑️             |
| [How to build a Spotify Recommendation Engine using Kafka and Memgraph](https://memgraph.com/blog/spotify-song-recommender)                                                                                                       | [Repository](https://github.com/memgraph/spotify-song-recommender)                             | ☑️             |
| [How to Visualize a Social Network in Python with a Graph Database: Flask + Docker + D3.js](https://memgraph.com/blog/how-to-visualize-a-social-network-in-python-with-a-graph-database)                                          | [Repository](https://github.com/memgraph/sng-demo)                                             |                |
| [How to Develop a Credit Card Fraud Detection Application using Memgraph, Flask, and D3.js](https://memgraph.com/blog/how-to-develop-a-credit-card-fraud-detection-application-using-memgraph-flask-and-d3js)                     | [Repository](https://github.com/memgraph/card-fraud)                                           |                |
| [Building a BitClout Social Network Visualization App With Memgraph and D3.js](https://memgraph.com/blog/visualize-the-bitclout-network-using-d3js)                                                                               | [Repository](https://github.com/memgraph/bitclout-visualizing-hodlers/tree/main/bitclout-demo) |                |
| [Identifying Essential Proteins using Betweenness Centrality & Memgraph MAGE](https://memgraph.com/blog/identifying-essential-proteins)                                                                                           | [Repository](https://github.com/memgraph/protein-explorer)                                     |                |
| [How to Build a Flight Network Analysis Graph-Based ASP.NET Application with Memgraph, C#, and D3.js](https://memgraph.com/blog/how-to-build-a-flight-network-analysis-graph-asp-net-application-with-memgraph-c-sharp-and-d3-js) | [Repository](https://github.com/memgraph/MemFlights)                                           |                |

We have also covered the following topics:

- [Optimizing Telco Networks With Graph Coloring & Memgraph
  MAGE](https://memgraph.com/blog/optimizing_telco_networks_with_graph_coloring_and_memgraph_mage)
- [Exploring Interpersonal Relationships in the
  Bible](https://memgraph.com/blog/exploring-the-hebrew-bible-person-relationships)
- [Modeling, Visualizing, and Navigating a Transportation Network with
  Memgraph](https://memgraph.com/blog/modeling_visualizing_navigating_a_transportation_network_with_memgraph)
- [Influencers among computer
  scientists](https://memgraph.com/blog/influencers-among-computer-scientists)
- [Air Traffic Routing with
  Memgraph](https://memgraph.com/blog/air-traffic-routing-with-memgraph)
- [Building a Recommendation System using
  Memgraph](https://memgraph.com/blog/building-a-recommendation-system-using-memgraph)
- [How to Implement Custom JSON Utility Procedures With Memgraph MAGE and
  Python](https://memgraph.com/blog/how-to-implement-custom-json-utility-procedures-with-memgraph-mage-and-python)
- [Running Community Detection with Memgraph and Python
  NetworkX](https://memgraph.com/blog/community_detection_with_memgraph_and_python_networkx)
- [How to Write Custom Cypher Procedures with NetworkX and
  Memgraph](https://memgraph.com/blog/how-to-write-custom-cypher-procedures-with-networkx-and-memgraph)
